--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,8 @@
     "rules": {
         "camelcase" : "off",
         "no-useless-constructor": "off"
+    },
+    "env": {
+        "vitest-globals/env": true
     }
 }
