--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.10.8",
     "eslint": "^8.56.0",
+    "eslint-plugin-vitest-globals": "^1.4.0",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
